--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,15 @@
 paddleocr>=2.0.1 
+streamlit==1.42.0
+requests==2.32.3
+numpy==1.26.4
+pandas==2.2.3
+opencv-python-headless==4.11.0.86
+Pillow==11.1.0
+mss==9.0.1
+paddleocr==2.9.1
+pytesseract  
+PyYAML==6.0.2  
+certifi==2025.1.31
+urllib3==2.3.0
+idna==3.10
+charset-normalizer==3.4.1
